# MBR-simulation

./: README.md
PythonInterface/: CMakeLists.txt  __init__.py  common.i  detector.i  event.i  simulation.i  utilities.i
src/: Antenna.cc  Atmosphere.cc  Channel.cc  ChannelGain.h  Detector.cc
